tests/NormalTests/paczka1/small_fuzzy/41603503.err
Error in line 1: CO8bRLnd S687 31,21
Error in line 8: 2qUi70 S687 0,5
Error in line 9: 2qUi70 S243 52,3
Error in line 5: CO8bRLnd S401 24,2
Error in line 10: 3xKga4AqE S243 208,2
